# job-search-pipeline

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  ingest.yml  tag-release.yml
config/: companies.example.csv
dbt/: .sqlfluff  dbt_project.yml  profiles.yml  profiles.yml.example
dbt/macros/: cross_db.sql
dbt/models/: exposures.yml  sources.yml
dbt/models/bronze/: bronze.yml  stg_ashby__jobs.sql  stg_greenhouse__jobs.sql  stg_lever__jobs.sql
dbt/models/gold/: fct_job_postings.sql  gold.yml
dbt/models/silver/: int_jobs__unioned.sql  silver.yml  silver_jobs.sql
dbt/seeds/: allowed_locations.csv  blocked_locations.csv  deal_breaker_tech.csv  desired_tech.csv  desired_titles.csv  seeds.yml
deliver/: digest.py
docs/: ARCHITECTURE.md  build-plan.md  fix-roadmap.md  v2-plan.md
docs/decisions/: 0001-medallion-dbt.md  0002-dual-target-duckdb-bigquery.md  0003-defer-ai-to-v2.md  0004-llm-in-dbt-pattern-c.md  0005-greenhouse-lever-only-v1.md  0006-deliver-links-not-summaries.md  0007-secrets-boundary.md  0008-job-key-vs-content-hash.md  0009-gemini-flash-lite-model.md  0010-three-zones-not-five-layers.md  0011-private-company-list.md  0012-board-ref-not-slug.md  0013-broaden-v1-ingestion.md  0014-per-zone-bigquery-datasets.md  0015-soft-desired-signals.md  0016-inactive-postings-retention.md  0017-openjobdata-aggregated-source.md  0018-company-discovery-notebook.md  0019-email-digest-delivery.md  0020-v2-scope-relevance-only.md
docs/research/: openjobdata.md
ingest/: pipeline.py  sources.py  validate_companies.py
ingest/adapters/: ashby.py  base.py  greenhouse.py  lever.py
shared/: config.py  http.py  models.py  storage.py
tests/: conftest.py  test_ashby_adapter.py  test_config.py  test_digest.py  test_greenhouse_adapter.py  test_http.py  test_lever_adapter.py  test_pipeline_companies.py  test_pipeline_run.py  test_pipeline_slugs.py  test_sources.py  test_storage.py  test_validate_companies.py
tests/fixtures/: ashby_jobs.json  greenhouse_jobs.json  lever_postings.json
tools/company_discovery/: README.md  ats_audit.py  categorize.ipynb  requirements.txt
